Make it build with latest Android Studio + some inprovements. - Better logs - Do reads as well. - Update gradle build

--- a/ndkfileaccesstest/build.gradle
+++ b/ndkfileaccesstest/build.gradle
@@ -9,16 +9,16 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
-
-        ndk {
-            moduleName "NDKFileAccessTest"
-            ldLibs "log"
-        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    externalNativeBuild {
+        ndkBuild {
+            path 'src/main/jni/Android.mk'
         }
     }
 }
